--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 # Database URL for Prisma
-# For Cloudflare, use PostgreSQL (e.g., Neon, Supabase, or Cloudflare D1)
+# Cloudflare D1 Database
 DATABASE_URL="postgresql://user:password@host:port/database"
+
+# Cloudflare D1 Database (生产环境)
+# 数据库名称: profile-db
+# 数据库ID: 4bb29d0b-79f9-4cb9-8f99-ea0a82810bf8
 
 # Next.js
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
+NEXT_PUBLIC_API_URL="http://localhost:3000"
