--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,18 +1,18 @@
-# Cloudflare Pages 部署配置
+# Cloudflare Pages 配置文件
+
+name = "profile"
+compatibility_date = "2024-11-27"
+
+# D1 数据库绑定
+[[d1_databases]]
+binding = "DB"
+database_name = "profile-db"
+database_id = "4bb29d0b-79f9-4cb9-8f99-ea0a82810bf8"
+
+# 环境变量
+[vars]
+NODE_VERSION = "18"
 
 # 构建配置
 [build]
-  command = "npm run build"
-  publish = ".next"
-
-# 环境变量（在 Cloudflare Dashboard 中设置）
-[build.environment]
-  NODE_VERSION = "18"
-
-# Headers 配置
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
+command = "npm install --legacy-peer-deps && npm run build"
