--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,6 +8,7 @@ compatibility_date = "2024-11-27"
 binding = "DB"
 database_name = "profile-db"
 database_id = "4bb29d0b-79f9-4cb9-8f99-ea0a82810bf8"
+migrations_dir = "migrations"
 
 # 环境变量
 [vars]
