--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^19.0.0-rc.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
+    "@cloudflare/workers-types": "^4.20251127.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
