update UI and db

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,9 @@ DATABASE_URL="postgresql://user:password@host:port/database"
 
 # Next.js
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
-NEXT_PUBLIC_API_URL="http://localhost:3000"
+
+# 生产环境 API URL - 在本地开发时直连生产环境的 API
+# 取消下面一行的注释并填入你的生产环境域名，即可直连生产环境 API
+# 例如：NEXT_PUBLIC_API_BASE_URL=https://your-production-domain.pages.dev
+# NEXT_PUBLIC_API_BASE_URL=
+
