--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
-    "@ant-design/nextjs-registry": "^1.2.0",
+    "@ant-design/nextjs-registry": "^1.3.0",
     "@prisma/client": "^5.22.0",
-    "antd": "^5.21.6",
+    "antd": "^6.0.0",
     "dayjs": "^1.11.19",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "next": "16.0.5",
     "prisma": "^5.22.0",
-    "react": "^19.0.0-rc.1",
-    "react-dom": "^19.0.0-rc.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.16",
